--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      ftp_user: ${{ secrets.ftp_user }}
+      ftp_password: ${{ secrets.ftp_password }}
+      ftp_server: ${{ secrets.ftp_server }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -22,7 +26,9 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo Hello, world!
+      run: 
+        echo Deploy website!,
+        curl -T index.html ftp://$ftp_user:$ftp_password@$ftp_server/index.html
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
