--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,15 +23,21 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+   
+    # Runs a set of commands using the runners shell
+    - name: Unit test Placeholder
+      run: |
+        echo Add other actions to build,
+        echo test, and deploy your project.
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
+    # Runs a 2 commands using the runners shell
+    - name: Upload index.html to web server
       run: 
         echo Deploy website!,
         curl -T index.html ftp://$ftp_user:$ftp_password@$ftp_server/index.html
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Deployment finished 
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
