--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,16 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request 
-# events but only for the master branch
-on:
-  push:
-    branches: [ master ]
-  
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+on: push
+name: Publish Website
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  FTP-Deploy-Action:
+    name: FTP-Deploy-Action
     runs-on: ubuntu-latest
-    env:
-      ftp_user: ${{ secrets.ftp_user }}
-      ftp_password: ${{ secrets.ftp_password }}
-      ftp_server: ${{ secrets.ftp_server }}
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-   
-    # Runs a command using the runners shell
-    - name: Upload index.html to web server
-      run: 
-        curl -p --insecure  "ftp://$ftp_server:21/" --user "$ftp_user:$ftp_password" -T "index.html" 
-
-    # Runs a set of commands using the runners shell
-    - name: Deployment finished 
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - uses: actions/checkout@master
+      with:
+        fetch-depth: 2
+    - name: FTP-Deploy-Action
+      uses: SamKirkland/FTP-Deploy-Action@3.0.0
+      with:
+        ftp-server: ftp://users.skynet.be/
+        ftp-username: ${{ secrets.FTP_USER }}
+        ftp-password: ${{ secrets.FTP_PASSWORD }
