Bugfix in deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,4 @@ jobs:
       with:
         ftp-server: ftp://users.skynet.be/
         ftp-username: ${{ secrets.FTP_USER }}
-        ftp-password: ${{ secrets.FTP_PASSWORD }
+        ftp-password: ${{ secrets.FTP_PASSWORD }}
